[package]
name = "meta-getter"
author = "Kota Yatagai"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
http = "0.1.17"
httparse = "1.5.1"
json = "0.12.4"
reqwest = { version = "0.11", features = ["blocking"] }
html_parser = "0.6.2"
